2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* man/update-alternatives.8: The vocabulary used was misleading
	and not really uniform. Try to standardize and make it match with
	the vocabulary used in the source code too.
	Includes minor fixes to make it match the behaviour of the current
	implementation.

2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Rewrite it entirely in a more
	object-oriented way. The only behaviour changes concern --config:
	the output is nicer and sorted, it accets a path as well as the
	index of the choice.
	* scripts/t/900_update_alternatives.t: Test suite adjusted to the
	--config change.

2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-gencontrol.pl, scripts/dpkg-gensymbols.pl: Reset
	umask to 0022 to ensure that files created in the DEBIAN directory
	have sane permissions.

2009-02-13  Guillem Jover  <guillem@debian.org>

	* src/query.c: Remove bogus comment about '--yet-to-unpack'.

2009-02-11  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Makefile.am: Drop cleanup-info.pl script.
	* man/Makefile.am, man/po/po4a.cfg: Drop cleanup-info(8) manual page.
	* README.feature-removal-schedule: Update information accordingly.

2009-02-11  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Makefile.am: Move update-alternatives, dpkg-divert and
	dpkg-statoverride to /usr/bin as they can be useful to users since
	they have --display or --list options that do not require
	administrative rights.
	* Makefile.am (EXTRA_DIST): Add debian/dpkg.links.

2009-02-11  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-buildpackage.pl: Add new option --target/-T to
	allow a specific debian/rules target to be run. The new --as-root
	option forces the target to be run with root rights.
	Add support for the two common syntaxes for long
	options	("--admindir=…" and "--admindir …").
	* man/dpkg-buildpackage.1: Update documentation accordingly.

2009-02-11  Raphael Hertzog  <hertzog@debian.org>