@@ -156,6 +156,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Rewrite update-alternatives (so that we can understand it again) and
     implement new features on top of it:
     - the --config output is now sorted. Closes: #437060
+    - it now logs information to /var/log/dpkg.log. Closes: #445270
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
