@@ -1,5 +1,10 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Add logging to
+	/var/log/dpkg.log.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* man/update-alternatives.8: The vocabulary used was misleading
 	and not really uniform. Try to standardize and make it match with
 	the vocabulary used in the source code too.
